kubernetes/dashboard-ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress-resource
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  defaultBackend:
    resource:
      apiGroup: k8s.example.com
      kind: StorageBucket
      name: static-assets
  rules:
  #- host: dashboard.com
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mongo-express-service
            port: 
              number: 8081
      - path: /red
        pathType: Prefix
        backend:
          service:
            name: rederecter-service
            port: 
              number: 80
      - path: /test
        pathType: Prefix
        backend:
          service:
            name: mongo-express-service
            port: 
              number: 8081
